E2E Zkp proof workflow
